--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=pizzaria
+spring.datasource.url=jdbc:mysql://localhost:3306/pizzaria
+spring.datasource.username=pizzaria_user
+spring.datasource.password=pizzaria_password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
